--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Plataforma educacional gamificada para preparação ENEM - Química",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "mkdir -p out && cp -r public/* out/",
     "start": "next start",
     "lint": "next lint",
     "scraper": "ts-node scripts/enem-scraper.ts"
