chore: add correct deploy script for Cloudflare Pages

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "mkdir -p out && cp -r public/* out/",
+    "deploy": "npx wrangler pages deploy out",
     "start": "next start",
     "lint": "next lint",
     "scraper": "ts-node scripts/enem-scraper.ts"
